fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@
 .right-col {
   padding-left: 0px;
   padding-right: 0px;
+  overflow: scroll;
 }
 
 .row {
